--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=brev
+
+# MySQL Database Configuration
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/brev_db}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=true
+
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
+spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:5}
+spring.datasource.hikari.connection-timeout=${HIKARI_CONNECTION_TIMEOUT:30000}
