add controller logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=brev
 
+# Active Profile Configuration
+spring.profiles.active=local
+
 # MySQL Database Configuration
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/brev_db}
 spring.datasource.username=${DB_USERNAME:root}
