--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,19 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:10}
 spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:5}
 spring.datasource.hikari.connection-timeout=${HIKARI_CONNECTION_TIMEOUT:30000}
+
+# Redis Configuration
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.database=${REDIS_DATABASE:0}
+spring.data.redis.timeout=${REDIS_TIMEOUT:2000ms}
+
+# Redis connection pool settings
+spring.data.redis.jedis.pool.max-active=${REDIS_POOL_MAX_ACTIVE:20}
+spring.data.redis.jedis.pool.max-idle=${REDIS_POOL_MAX_IDLE:10}
+spring.data.redis.jedis.pool.min-idle=${REDIS_POOL_MIN_IDLE:5}
+spring.data.redis.jedis.pool.max-wait=${REDIS_POOL_MAX_WAIT:3000ms}
+
+# Cache TTL settings (in seconds)
+app.cache.url-mapping.ttl=${CACHE_URL_MAPPING_TTL:3600}
