add docker setup and check maintenance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,18 @@ spring.data.redis.timeout=${REDIS_TIMEOUT:2000ms}
 
 # Redis connection pool settings
 spring.data.redis.jedis.pool.max-active=${REDIS_POOL_MAX_ACTIVE:20}
-spring.data.redis.jedis.pool.max-idle=${REDIS_POOL_MAX_IDLE:10}
-spring.data.redis.jedis.pool.min-idle=${REDIS_POOL_MIN_IDLE:5}
-spring.data.redis.jedis.pool.max-wait=${REDIS_POOL_MAX_WAIT:3000ms}
+spring.data.redis.jedis.pool.max-idle=${REDIS_POOL_MAX_IDLE:8}
+spring.data.redis.jedis.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
 
-# Cache TTL settings (in seconds)
-app.cache.url-mapping.ttl=${CACHE_URL_MAPPING_TTL:3600}
+# Application Specific Configuration
+app.base-url=${BASE_URL:http://localhost:8080}
+app.cache.url-mapping.ttl=${CACHE_TTL:3600}
+
+# Scheduled Tasks Configuration
+app.cleanup.enabled=${CLEANUP_ENABLED:true}
+app.cleanup.retention-days=${CLEANUP_RETENTION_DAYS:30}
+app.statistics.enabled=${STATISTICS_ENABLED:true}
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=${ACTUATOR_ENDPOINTS:health,info,metrics}
+management.endpoint.health.show-details=${ACTUATOR_HEALTH_DETAILS:when_authorized}
